--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
       <h2>Find your next vacation here.</h2>
       <p>
         Please enter the state or states you want to take a trip to and the
-        number of results you want to view. We have a default of 10 but you can
+        number of results you want to view. Enter your states by their two
+        letter code as seen on the map. We have a default of 10 but you can
         shrink or expand that number as you please.
       </p>
+      <img src="images/lettering-system.jpeg" class="img" />
       <form class="js-form">
         <label for="search-term">State Name</label>
         <input type="text" name="search-term" id="js-search-term" required />
