--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header><h1>National Parks Vacation</h1></header>
     <div>
-      <h2>Find your next vacation here.</h2>
+      <h2>Find your next vacation here</h2>
       <p>
         Please enter the state or states you want to take a trip to and the
         number of results you want to view. Enter your states by their two
